--- a/style.css
+++ b/style.css
@@ -46,8 +46,8 @@ canvas {
 
 .divbutton {
     z-index: 3;
-    /* width: 100px; */
-    width: 15%;
+    width: 100%;
+    height: 100%;
     background-color: #fff;
 }
 
@@ -56,6 +56,12 @@ canvas {
     font-size: 30px;
     color: rgb(100, 100, 100);
     text-align: center;
+    border: rgb(100, 100, 100) 2px solid;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .hidden {
@@ -63,52 +69,31 @@ canvas {
     pointer-events: none;
 }
 
-#button-left {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    height: 33%;
-
-    border-right: rgb(100, 100, 100) 2px solid;
+.layout-wrapper {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
 }
 
-#button-right {
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    height: 50%;
-
-    border-left: rgb(100, 100, 100) 2px solid;
+.layout-left {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
 }
 
-#button-down {
-    position: absolute;
-    top: 33%;
-    left: 0px;
-    height: 33%;
-
-    border-top: rgb(100, 100, 100) 2px solid;
-    border-right: rgb(100, 100, 100) 2px solid;
+.layout-center {
+    flex: 2;
 }
 
-#button-rotate {
-    position: absolute;
-    top: 50%;
-    right: 0px;
-    height: 50%;
-
-    border-top: rgb(100, 100, 100) 2px solid;
-    border-left: rgb(100, 100, 100) 2px solid;
-}
-
-#button-drop {
-    position: absolute;
-    top: 66%;
-    left: 0px;
-    height: 34%;
-
-    border-top: rgb(100, 100, 100) 2px solid;
-    border-right: rgb(100, 100, 100) 2px solid;
+.layout-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
 }
 
 #title-wrapper {
@@ -117,7 +102,6 @@ canvas {
     left: 0px;
     width: 100%;
     height: 40px;
-
     text-align: center;
     font-family: 'VT323', monospace;
     font-size: 32px;
