--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 canvas {
-    position: absolute;
+    position: relative;
     top: 0px;
     left: 0px;
     width: 100%;
@@ -49,6 +49,10 @@ canvas {
     width: 100%;
     height: 100%;
     background-color: #fff;
+    border: rgb(100, 100, 100) 2px solid;
+    /* stacked vertically combines top and bottom border to 2px */
+    border-top-width: 1px;
+    border-bottom-width: 1px;
 }
 
 .divbutton-body {
@@ -56,7 +60,6 @@ canvas {
     font-size: 30px;
     color: rgb(100, 100, 100);
     text-align: center;
-    border: rgb(100, 100, 100) 2px solid;
     width: 100%;
     height: 100%;
     display: flex;
@@ -86,6 +89,11 @@ canvas {
 
 .layout-center {
     flex: 2;
+    /*
+        display: relative makes absolutely positioned
+        children position relative to this element
+    */
+    display: relative;
 }
 
 .layout-right {
