--- a/style.css
+++ b/style.css
@@ -227,3 +227,25 @@ canvas {
     color: rgb(100, 100, 100);
     text-align: center;
 }
+
+#info-text {
+    position: absolute;
+    top: 5%;
+    width: 100%;
+
+    text-align: center;
+    color: rgb(100, 100, 100);
+
+    font-family: 'VT323', monospace;
+    font-size: 30px;
+
+    z-index: 2;
+}
+
+#info-canvas {
+    position: absolute;
+    top: 15%;
+    left: 0px;
+    height: 85%;
+    z-index: 1;
+}
